--- a/p8105_hw3_xl3214.md
+++ b/p8105_hw3_xl3214.md
@@ -100,21 +100,17 @@ including:
     vegetables fruits”. Include the number of times each item is ordered
     in your table.
 
-<!-- -->
-
-    ## # A tibble: 9 × 3
-    ## # Groups:   aisle [3]
-    ##   aisle                      product_name                                  n_obs
-    ##   <chr>                      <chr>                                         <int>
-    ## 1 packaged vegetables fruits Organic Baby Spinach                           9784
-    ## 2 packaged vegetables fruits Organic Raspberries                            5546
-    ## 3 packaged vegetables fruits Organic Blueberries                            4966
-    ## 4 baking ingredients         Light Brown Sugar                               499
-    ## 5 baking ingredients         Pure Baking Soda                                387
-    ## 6 baking ingredients         Cane Sugar                                      336
-    ## 7 dog food care              Snack Sticks Chicken & Rice Recipe Dog Treats    30
-    ## 8 dog food care              Organix Chicken & Brown Rice Recipe              28
-    ## 9 dog food care              Small Dog Biscuits                               26
+| aisle                      | product_name                                  | n_obs |
+|:---------------------------|:----------------------------------------------|------:|
+| packaged vegetables fruits | Organic Baby Spinach                          |  9784 |
+| packaged vegetables fruits | Organic Raspberries                           |  5546 |
+| packaged vegetables fruits | Organic Blueberries                           |  4966 |
+| baking ingredients         | Light Brown Sugar                             |   499 |
+| baking ingredients         | Pure Baking Soda                              |   387 |
+| baking ingredients         | Cane Sugar                                    |   336 |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |    30 |
+| dog food care              | Organix Chicken & Brown Rice Recipe           |    28 |
+| dog food care              | Small Dog Biscuits                            |    26 |
 
 - For aisle *packaged vegetables fruits*, products Organic Baby Spinach,
   Organic Raspberries, Organic Blueberries are the three most popular
@@ -136,12 +132,9 @@ including:
     Apples and Coffee Ice Cream are ordered on each day of the week;
     format this table for human readers (i.e. produce a 2 x 7 table).
 
-<!-- -->
-
-    ## # A tibble: 1 × 7
-    ##     Sun   Mon   Tue   Wed Thurs   Fri   Sat
-    ##   <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>
-    ## 1  13.6  12.2  12.8  14.7  13.2  12.6  13.2
+|  Sun |      Mon |      Tue |      Wed |    Thurs |      Fri |   Sat |
+|-----:|---------:|---------:|---------:|---------:|---------:|------:|
+| 13.6 | 12.17391 | 12.83824 | 14.68519 | 13.17308 | 12.64286 | 13.25 |
 
 - Wed has the latest mean hour of day at which Pink Lady Apples and
   Coffee Ice Cream are ordered.
@@ -197,33 +190,6 @@ responses include Excellent, Very good, Good, Fair, Poor.
     a line for each state across years – the geom_line geometry and
     group aesthetic will help).
 
-<!-- -->
-
-    ## # A tibble: 443 × 3
-    ## # Groups:   year, location_abbr [443]
-    ##     year location_abbr data_value_state_avg
-    ##    <int> <chr>                        <dbl>
-    ##  1  2010 AL                            18.4
-    ##  2  2010 AZ                            21.6
-    ##  3  2010 AR                            25.4
-    ##  4  2010 CA                            23.9
-    ##  5  2010 CO                            25.4
-    ##  6  2010 CT                            24.2
-    ##  7  2010 DE                            20.3
-    ##  8  2010 DC                            26.1
-    ##  9  2010 FL                            NA  
-    ## 10  2010 GA                            23.1
-    ## # ℹ 433 more rows
-
-    ## # A tibble: 4 × 3
-    ## # Groups:   year, location_abbr [1]
-    ##    year location_abbr data_value_state_avg
-    ##   <int> <chr>                        <dbl>
-    ## 1    NA <NA>                            NA
-    ## 2    NA <NA>                            NA
-    ## 3    NA <NA>                            NA
-    ## 4    NA <NA>                            NA
-
 ![](p8105_hw3_xl3214_files/figure-gfm/Q2-%20Spaghetti%20Plot-1.png)<!-- -->
 
 - The average crude prevalence across locations within a state
@@ -239,10 +205,10 @@ responses include Excellent, Very good, Good, Fair, Poor.
 
 ![](p8105_hw3_xl3214_files/figure-gfm/Q2-%20Two-panel%20plot-1.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Q2-%20Two-panel%20plot-2.png)<!-- -->
 
-- Based on the plots, we can see that *Poor* responses correspond to the
-  lowest crude prevalence across all locations in NY State for both 2006
-  and 2010, and as the order of responses increases towards *Very good*,
-  the crude prevalence also increases. However, for responses of
+- Based on the plots, we can see that *Poor* responses had the lowest
+  crude prevalence across all locations in NY State for both 2006 and
+  2010, and as the order of responses increases towards *Very good*, the
+  crude prevalence also increases. However, for responses of
   *Excellent*, we see a decreased crude prevalence distribution compared
   to the previous *Good* and *Very good*.
 
@@ -300,21 +266,14 @@ summary(q3_merged)
     distributions for men and women in each education category. Comment
     on these items.
 
-<!-- -->
-
-    ## `summarise()` has grouped output by 'education'. You can override using the
-    ## `.groups` argument.
-
-    ## # A tibble: 6 × 3
-    ## # Groups:   education [3]
-    ##   education              sex    n_obs
-    ##   <ord>                  <chr>  <int>
-    ## 1 Less than high school  female    28
-    ## 2 Less than high school  male      27
-    ## 3 High school equivalent female    23
-    ## 4 High school equivalent male      35
-    ## 5 More than high school  female    59
-    ## 6 More than high school  male      56
+| education              | sex    | n_obs |
+|:-----------------------|:-------|------:|
+| Less than high school  | female |    28 |
+| Less than high school  | male   |    27 |
+| High school equivalent | female |    23 |
+| High school equivalent | male   |    35 |
+| More than high school  | female |    59 |
+| More than high school  | male   |    56 |
 
 ![](p8105_hw3_xl3214_files/figure-gfm/Q3-%20sex%20in%20each%20education%20cat%20and%20age%20distribution-1.png)<!-- -->
 
@@ -335,10 +294,6 @@ summary(q3_merged)
     should compare men to women and have separate panels for each
     education level. Include a trend line or a smooth to illustrate
     differences. Comment on your plot.
-
-<!-- -->
-
-    ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
 
 ![](p8105_hw3_xl3214_files/figure-gfm/Q3-%20calculate%20total%20mims%20and%20plot%20it%20against%20age-1.png)<!-- -->
 
@@ -369,10 +324,6 @@ summary(q3_merged)
     time courses for each education level and use color to indicate sex.
     Describe in words any patterns or conclusions you can make based on
     this graph; including smooth trends may help identify differences.
-
-<!-- -->
-
-    ## `geom_smooth()` using method = 'gam' and formula = 'y ~ s(x, bs = "cs")'
 
 ![](p8105_hw3_xl3214_files/figure-gfm/Q3-%2024-hour%20activity%20time%20courses%20for%20each%20education%20level%20and%20sex-1.png)<!-- -->
 
